# screensaver

./: meson.build
hacks/: fps.c  meson.build  screenhack-sdl.c  screenhack.h  xspirograph.man
hacks/glx/: toast.dxf  toast2.dxf  toaster.dxf  toaster_base.dxf  toaster_handle.dxf  toaster_handle2.dxf  toaster_jet.dxf  toaster_knob.dxf  toaster_slots.dxf  toaster_wing.dxf
jwxyz/: jwxyz-gl.c  jwxyz-sdl-wm.c  jwxyz-sdl.c  jwxyz-sdl.h  meson.build
po/: de.po
utils/: meson.build  resources.c  xft.h
